--- a/qcc_ui.ui
+++ b/qcc_ui.ui
@@ -238,17 +238,17 @@
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_12">
          <item>
-          <widget class="QLabel" name="label_22">
+          <widget class="QLineEdit" name="lineEdit_select_xuv_file"/>
+         </item>
+         <item>
+          <widget class="QPushButton" name="pushButton_select_xuv_file">
            <property name="text">
-            <string>打开：</string>
+            <string>选择文件</string>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QLineEdit" name="lineEdit_7"/>
-         </item>
-         <item>
-          <widget class="QPushButton" name="pushButton_7">
+          <widget class="QPushButton" name="pushButton_erase">
            <property name="text">
             <string>擦除</string>
            </property>
